style: styling aligned with branding

--- a/FilterDialog.html
+++ b/FilterDialog.html
@@ -8,6 +8,9 @@
   <body>
     <div class="container">
       <header>
+        <div class="logo-container">
+          <img src="https://www.monks.com/favicon.ico" alt="Monks Logo" class="logo">
+        </div>
         <h2>Filter Products</h2>
         <p class="subtitle">Refine your product list with the filters below</p>
       </header>
@@ -76,3 +79,4 @@
     <?!= include('JavaScript'); ?>
   </body>
 </html>
+
